Brendan's comments ch6

--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -13,10 +13,10 @@ To be completed.
 
  LRPs described in this working paper rely on CU-level benchmarks and assessments, for which data vary in quality and quantity. Our case studies demonstrate the application of proportion-based and aggregate-abundance based LRPs to SMUs containing CUs with a range of data availability including those with stock-recruitment benchmarks, habitat-based benchmarks, and spawner abundances percentile-based benchmarks. In addition, we demonstrate assessments for SMUs containing CUs without abundance-based benchmarks where statuses rely on short and long-term trends over time, as demonstrated in application of the Rapid Multidimensional Scanner Tool to Inside Southcoast Chum - Non Fraser. 
 
-At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark ($S_{gen}$ or percentiles) resulted in similar status assessments to using the Rapid Multidimensional Scanning Tool. These similarities occur because when the lower benchmarks estimates are available, the rapid multidimensional scanning tool will almost always default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the interior Fraser coho study case for 1 CU in 3 years<!--correct me I'm wrong on numbers here KH-->. In these cases, the Rapid Multidimensional Scanning Tool triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached. 
+At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark ($S_{gen}$ or percentiles) resulted in similar status assessments to using the Rapid Multidimensional Scanning Tool. <!--BC:These sentences seem to contradict themselves. -->  These similarities occur because when the lower benchmarks estimates are available, the rapid multidimensional scanning tool will almost always default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the interior Fraser coho study case for 1 CU in 3 years<!--correct me I'm wrong on numbers here KH-->. In these cases, the Rapid Multidimensional Scanning Tool triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached. 
 
 
-In addition, we found that using the Rapid Multidimensional Scanning Tool allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Rapid Multidimensional Scanning Tool is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast case study. <!--CW: added the following to emphasize the importance of assessing more CUs -->  The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CU with low levels of synchrony. When covariation among the CUs is low, it is not possible to assume that CUs with missing  or limited data can be represented by CUs with data. Small CUs are also difficult to represent by proxy, as the small CUs tend to be more vulnerable than larger CUs even is productivity is similar (cite). 
+In addition, we found that using the Rapid Multidimensional Scanning Tool allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Rapid Multidimensional Scanning Tool is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast case study. <!--CW: added the following to emphasize the importance of assessing more CUs -->  The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CU with low levels of synchrony that cannot be represented by proxy. In addition, small CUs are also difficult to represent by proxy, as the small CUs tend to be more vulnerable than larger CUs even if productivity is similar (cite). 
 
 <!--CH: this section needs to be informed by a discussion of CU-representativeness within each SMU (i.e., 4 criteria outlines in Ch 4 of Guidelines WP). My guess is that for WCVI CK, the threats are different enough that we could expect independent dynamics, e.g., not representative of each other, and this is likely the same for ISC chum. However, I'm not sure about IFR coho; the one v small CU might be considered independent of the others because it's so small, but the remaining 4 might be sufficiently similar to be representative?. 
 
@@ -80,11 +80,11 @@ CW Question: Why did we not apply the projection-based LRP to the Chum study cas
 
 -->
 
-The projection-based LRPs approach relies on closed-loop simulation model to project future CU abundances. These projections are then used to identify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirement for our implementation of projection-based LRPs is the availability of information on productivity and capacity for the CUs within an SMU, and covariance in dynamics among them. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see interior Fraser Coho study case, chapter \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook study case, chapter \@ref(WCVIchinookChapter)). 
+The projection-based LRPs approach relies on closed-loop simulation models to project future CU abundances. These projections are then used to quantify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirement for our implementation of projection-based LRPs is the availability of information on productivity and capacity for the CUs within an SMU, and covariance in dynamics among them. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see interior Fraser Coho study case, chapter \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook study case, chapter \@ref(WCVIchinookChapter)). 
 
 The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics via consideration of alternative future scenarios. For example, for the WCVI chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and  variability in exploitation among inlets. For the interior Fraser coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
 
-We also demonstrated that the projection-based LRPs is sensitive to the assumed levels of exploitation rate in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability among stock-recruitment parameters increase, and also as uncertainty in parameter estimates increase. This property of projection-based LRPs is explored in Appendix \@ref(app:ERsensitivity-appendix). This feature of the approach could be used in future exercises to identify the optimum levels of exploitation, to ensure that the aggregate abundance LRP is in line with current observed abundances. 
+We also demonstrated that projection-based LRPs are sensitive to the assumed levels of exploitation in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability in stock-recruitment parameters among CUs increase, and also as uncertainty in parameter estimates increase. This property of projection-based LRPs is explored in Appendix \@ref(app:ERsensitivity-appendix). This feature of the approach could be used in future exercises to identify the optimum levels of exploitation, to ensure that the aggregate abundance LRP is in line with current observed abundances. 
  
 
 
